<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_message">Digite un nombre</string>
    <string name="last_name_message">Digite un apellido</string>
    <string name="gender_message">Genero:</string>
    <string name="date_message">Nacimiento:</string>
    <string name="radio_message">Le gusta programar?</string>
    <string name="language_message">Lenguaje:</string>
    <string name="button_send">Enviar</string>
    <string name="button_clear">Limpiar</string>
    
    <string-array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

</resources>