<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:hint="@string/name_message"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/last_name_message"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/button_send"
            android:layout_width="89dp"
            android:layout_height="42dp" android:id="@+id/button_send"
            android:onClick="submitForm"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/button_clear"
            android:layout_width="89dp"
            android:layout_height="42dp" android:id="@+id/button_clear"
            android:onClick="clickClear"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_send"/>
    <RadioGroup
            android:id="@+id/radio_group"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@+id/textViewGusto" android:layout_marginStart="8dp">
        <RadioButton
                android:id="@+id/radioButton"
                android:text="Si"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
        />
        <RadioButton
                android:id="@+id/radioButton2"
                android:text="No"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
        />
    </RadioGroup>
    <TextView
            android:text="@string/gender_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textViewGenero" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"/>
    <EditText
            android:layout_width="274dp"
            android:layout_height="51dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editTextDate"
            app:layout_constraintStart_toEndOf="@+id/textViewNacimiento"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/date_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textViewNacimiento"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDate"/>
    <Spinner
            android:id="@+id/spinner"
            android:layout_width="308dp"
            android:layout_height="33dp"
            app:layout_constraintStart_toEndOf="@+id/textViewGenero"
            android:layout_marginStart="8dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"/>
    <TextView
            android:id="@+id/textViewGusto"
            android:text="@string/radio_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/radio_message"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/editTextDate"/>
    <TextView
            android:text="@string/language_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textView5" android:layout_marginTop="85dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewGusto"
            app:layout_constraintEnd_toStartOf="@+id/check_java"/>
    <CheckBox
            android:text="Python"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/check_python"
            app:layout_constraintStart_toEndOf="@+id/check_java" android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/check_js"/>
    <CheckBox
            android:text="Java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/check_java"
            android:layout_marginStart="80dp" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/check_python" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/radio_group"/>
    <CheckBox
            android:text="C/C++"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/check_c"
            app:layout_constraintTop_toBottomOf="@+id/check_js" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="173dp" app:layout_constraintEnd_toStartOf="@+id/check_cs"/>
    <CheckBox
            android:text="JS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/check_js"
            app:layout_constraintTop_toBottomOf="@+id/check_java" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="173dp"/>
    <CheckBox
            android:text="C#"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/check_cs"
            app:layout_constraintTop_toBottomOf="@+id/check_go" app:layout_constraintStart_toEndOf="@+id/check_c"/>
    <CheckBox
            android:text="Golang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/check_go"
            app:layout_constraintStart_toEndOf="@+id/check_js" app:layout_constraintTop_toBottomOf="@+id/check_python"
            android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>